bugfixes and efficiency changes
bugfix: add arguments to client bat file to fix warning messages,
eff: change if statements in callback to if else statements