@@ -1,2 +1,2 @@
-java -jar pc_client.jar
+java -jar --add-opens=java.base/sun.nio.ch=ALL-UNNAMED pc_client.jar 
 PAUSE
